fix(anilist): Style scrollbar color

--- a/styles/anilist/catppuccin.user.css
+++ b/styles/anilist/catppuccin.user.css
@@ -25,6 +25,16 @@
     #catppuccin(@darkFlavor, @accentColor);
   }
 
+  // Scrollbar color
+  * {
+    scrollbar-color: @catppuccin[@@lightFlavor][@@accentColor]
+      fade(@catppuccin[@@darkFlavor][@crust], 0.2);
+    &:has(.site-theme-dark) {
+      scrollbar-color: @catppuccin[@@darkFlavor][@@accentColor]
+        fade(@catppuccin[@@darkFlavor][@crust], 0.2);
+    }
+  }
+
   #catppuccin(@lookup, @accent) {
     @rosewater: @catppuccin[@@lookup][@rosewater];
     @flamingo: @catppuccin[@@lookup][@flamingo];
